<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:weightSum="1">
    <include android:id="@+id/convert_title_layout" layout="@layout/top_title"/>
  	<EditText 
	    android:id="@+id/editnum"
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
		android:paddingLeft="5dp"
		android:phoneNumber="true"
        android:hint="@string/telphone_number" 
        style="@style/blue_edit"
	    />
    <EditText 
	    android:id="@+id/editSMS"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/message"
	     android:layout_weight="0.75"
	     />
   <Button
	    android:id="@+id/chose_message_num"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/chose_num" 
	    android:background="@drawable/btn_pic"
	    android:layout_margin="3dip"
	    />
    <Button
        android:id="@+id/set_message_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_time"
        android:background="@drawable/btn_pic"
	    android:layout_margin="3dip" 
        />
    <Button
        android:id="@+id/save_message_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_time" 
        android:background="@drawable/btn_pic"
	    android:layout_margin="3dip"/>
    <Button
	    android:id="@+id/cancle_message_time"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/cancle_time" 
	    android:background="@drawable/btn_pic"
	    android:layout_margin="3dip"/>
    <TextView
        android:id="@+id/message_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />  
</LinearLayout>