<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#ffffff"
    >
    <include android:id="@+id/convert_title_layout" layout="@layout/top_title"/>
    <EditText
        android:id="@+id/num"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
		android:paddingLeft="5dp"
		android:phoneNumber="true"
		android:hint="输入或者添加需要拨打的号码"
        style="@style/blue_edit"
        />
     <Button
	    android:id="@+id/chose_num"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/chose_num" 
	    android:background="@drawable/btn_pic"
	    android:layout_margin="3dip"
	    />
    <Button
        android:id="@+id/set_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_time" 
        android:background="@drawable/btn_pic"
        android:layout_margin="3dip"
        />
    <Button
        android:id="@+id/save_call_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_time" 
        android:background="@drawable/btn_pic"
        android:layout_margin="3dip"
        />
    <Button
        android:id="@+id/cancle_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancle_time" 
        android:background="@drawable/btn_pic"
        android:layout_margin="3dip"
        />
     <TextView
        android:id="@+id/phone_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
</LinearLayout>