<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    >
    <include android:id="@+id/query_title_layout" layout="@layout/top_title"/>
    <LinearLayout
      android:id="@+id/timeper_layout" 
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" 
      android:orientation="vertical"
      android:background="@drawable/mobile_item_shape"
      android:layout_below="@id/query_title_layout"
      android:layout_margin="10dp"
      >
    <TextView 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/help" 
	    style="@style/query_result_theme"
	    android:id="@+id/help"
	    />
    <TimePicker 
	    android:id="@+id/timePkr" 
	    android:layout_below="@id/help" 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    style="@style/query_result_theme"
	    />
	 </LinearLayout>
    <RadioGroup
        android:orientation="vertical"
        android:id="@+id/menu"
        android:layout_below="@id/timeper_layout"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_margin="10dp"
        android:background="@drawable/mobile_item_shape"
        >
        <RadioButton
            android:text="@string/ring_and_vibrate"
            android:id="@+id/ring_and_vibrate"
            android:layout_width="fill_parent"
            android:textSize="16dp"
            android:paddingLeft="50dp"
            android:textColor="#ff2e3d47"
            />
        <RadioButton
            android:text="@string/ring"
            android:id="@+id/ring"
            android:layout_width="fill_parent"
            android:textSize="16sp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:textColor="#ff2e3d47"
            />
        <RadioButton
            android:text="@string/vibrate"
            android:id="@+id/vibrate"
            android:layout_width="fill_parent"
            android:textSize="16sp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:textColor="#ff2e3d47"
            />
        <RadioButton
            android:text="@string/silent"
            android:id="@+id/silent"
            android:layout_width="fill_parent"
            android:textSize="16sp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:textColor="#ff2e3d47"
            />
    </RadioGroup>
</RelativeLayout>