<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    >
    <RelativeLayout 
     android:id="@+id/top_layout"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:background="@drawable/top_bg3"
     >
     <ImageView 
         android:id="@+id/home"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:src="@drawable/home_selected"
	     android:layout_alignParentLeft="true"
	     android:layout_marginLeft="5dp"
	     android:layout_marginTop="5dp"
	     android:layout_marginBottom="3dp"
	     android:layout_centerInParent="true" 
	     />
	 <TextView 
		 android:layout_width="wrap_content"
		 android:layout_height="wrap_content"
		 android:text="@string/query_tool"
		 android:textColor="#ff000000"
		 android:textSize="20dp"
		 android:textAppearance="?android:attr/textAppearanceLarge"
		 android:gravity="center"
		 android:layout_toRightOf="@id/home"
		 android:layout_marginLeft="8dp"
		 android:layout_marginTop="5dp"
		 android:layout_centerInParent="true" 
		 />
     <ImageView
         android:id="@+id/reback"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:background="@drawable/about_selected"
	     android:layout_alignParentRight="true"
	     android:layout_marginRight="10dp"
	     android:layout_marginTop="5dp"
	     android:layout_centerInParent="true" 
	     />
     </RelativeLayout>
     <RelativeLayout 
         android:id="@+id/layout1"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:layout_marginTop="30dp" 
	     android:layout_marginLeft="50dp"
	     android:layout_marginRight="50dp"
	     android:gravity="center_vertical"
	     android:layout_below="@id/top_layout"
	     >	       
       <ImageView
           android:id="@+id/query_id"
           android:layout_marginLeft="15dp" 
           android:src="@drawable/id_selected" 
           android:layout_height="wrap_content" 
           android:layout_width="wrap_content"
           />
     	<TextView 
      		  android:layout_height="wrap_content"
		      android:layout_width="wrap_content"
		      android:text="@string/query_id"
		      android:textColor="@color/label_name_color"
		      android:layout_marginLeft="10dp" 
		      android:gravity="center_horizontal"
		      android:layout_below="@id/query_id"
		      />
        <ImageView 
             android:id="@+id/query_ip"
	         android:layout_height="wrap_content"
	         android:layout_width="wrap_content" 
	         android:layout_alignParentRight="true"
	         android:layout_marginRight="20dp"
	         android:src="@drawable/ip_selected"
	         android:layout_alignParentTop="true"
	         />
     	<TextView 
      		  android:layout_height="wrap_content"
		      android:layout_width="wrap_content"
		      android:text="@string/query_ip"
		      android:textColor="@color/label_name_color"
		      android:layout_alignParentRight="true"
		      android:layout_marginRight="20dp"
		      android:gravity="center_horizontal"
		      android:layout_below="@id/query_ip"
		      />
	</RelativeLayout>	
	<RelativeLayout 
	     android:id="@+id/layout2"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:layout_marginTop="30dp" 
	     android:layout_marginLeft="50dp"
	     android:layout_marginRight="50dp"
	     android:gravity="center_vertical"
	     android:layout_below="@id/layout1"
	     >	       
       <ImageView
           android:id="@+id/query_phone"
           android:layout_marginLeft="15dp" 
           android:src="@drawable/phone_selected" 
           android:layout_height="wrap_content" 
           android:layout_width="wrap_content"
           />
     	<TextView 
      		  android:layout_height="wrap_content"
		      android:layout_width="wrap_content"
		      android:text="@string/query_phone"
		      android:textColor="@color/label_name_color"
		      android:layout_marginLeft="10dp" 
		      android:gravity="center_horizontal"
		      android:layout_below="@id/query_phone"
		      />
        <ImageView 
             android:id="@+id/query_postcode"
	         android:layout_height="wrap_content"
	         android:layout_width="wrap_content" 
	         android:layout_alignParentRight="true"
	         android:layout_marginRight="20dp"
	         android:src="@drawable/postcode_selected"
	         android:layout_alignParentTop="true"
	         />
     	<TextView 
     	  android:layout_height="wrap_content"
	      android:layout_width="wrap_content"
	      android:text="@string/query_postcode"
	      android:textColor="@color/label_name_color"
	      android:layout_alignParentRight="true"
	      android:layout_marginRight="15dp"
	      android:gravity="center_horizontal"
	      android:layout_below="@id/query_postcode"
	      />
	</RelativeLayout>	
	<RelativeLayout 
	     android:id="@+id/layout3"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:layout_marginTop="30dp" 
	     android:layout_marginLeft="50dp"
	     android:layout_marginRight="50dp"
	     android:gravity="center_vertical"
	     android:layout_below="@id/layout2"
	     >	       
       <ImageView
           android:id="@+id/query_bank" 
           android:layout_marginLeft="15dp" 
           android:src="@drawable/creditcard_selected" 
           android:layout_height="wrap_content" 
           android:layout_width="wrap_content"
           />
     	<TextView 
      		  android:layout_height="wrap_content"
		      android:layout_width="wrap_content"
		      android:text="@string/query_bank"
		      android:textColor="@color/label_name_color"
		      android:layout_marginLeft="10dp" 
		      android:gravity="center_horizontal"
		      android:layout_below="@id/query_bank"
		      />
        <ImageView 
             android:id="@+id/query_alexa" 
	         android:layout_height="wrap_content"
	         android:layout_width="wrap_content" 
	         android:layout_alignParentRight="true"
	         android:layout_marginRight="20dp"
	         android:src="@drawable/alexa_selected"
	         android:layout_alignParentTop="true"
	         />
     	<TextView 
      		  android:layout_height="wrap_content"
		      android:layout_width="wrap_content"
		      android:text="@string/query_alexa"
		      android:textColor="@color/label_name_color"
		      android:layout_alignParentRight="true"
		      android:layout_marginRight="12dp"
		      android:gravity="center_horizontal"
		      android:layout_below="@id/query_alexa"
		      />
	</RelativeLayout>
</RelativeLayout>


