<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    >
    <RelativeLayout 
     android:id="@+id/top_layout"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:background="@drawable/top_bg3"
     >
     <ImageView 
         android:id="@+id/top_img"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:src="@drawable/tool"
	     android:layout_alignParentLeft="true"
	     android:layout_marginLeft="10dp"
	     android:layout_marginTop="10dp"
	     android:layout_centerInParent="true" 
	     />
	 <TextView 
		 android:layout_width="wrap_content"
		 android:layout_height="wrap_content"
		 android:text="@string/app_name"
		 android:textColor="#ff000000"
		 android:textSize="20dp"
		 android:textAppearance="?android:attr/textAppearanceLarge"
		 android:gravity="center"
		 android:layout_toRightOf="@id/top_img"
		 android:layout_marginLeft="8dp"
		 android:layout_marginTop="8dp"
		 />
     <ImageButton
         android:id="@+id/top_info"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:background="@drawable/info_selected"
	     android:layout_alignParentRight="true"
	     android:layout_marginRight="10dp"
	     android:layout_marginTop="10dp"
	     android:layout_centerInParent="true" 
	     />
     </RelativeLayout>
     <RelativeLayout 
         android:id="@+id/layout1"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:layout_marginTop="30dp" 
	     android:layout_marginLeft="50dp"
	     android:layout_marginRight="50dp"
	     android:gravity="center_vertical"
	     android:layout_below="@id/top_layout"
	     >	       
       <ImageView
           android:id="@+id/device_view" 
           android:layout_marginLeft="15dp" 
           android:src="@drawable/select_mobile" 
           android:layout_height="wrap_content" 
           android:layout_width="wrap_content"
           android:layout_alignParentTop="true"
           />
     	<TextView 
      		  android:layout_height="wrap_content"
		      android:layout_width="wrap_content"
		      android:text="@string/device_Info"
		      android:textColor="@color/label_name_color"
		      android:layout_marginLeft="10dp" 
		      android:gravity="center_horizontal"
		      android:layout_below="@id/device_view"
		      />
        <ImageView 
             android:id="@+id/wifi_view" 
	         android:layout_height="wrap_content"
	         android:layout_width="wrap_content" 
	         android:layout_alignParentRight="true"
	         android:layout_marginRight="20dp"
	         android:src="@drawable/wifi_selected"
	         android:layout_alignParentTop="true"
	         />
     	<TextView 
      		  android:layout_height="wrap_content"
		      android:layout_width="wrap_content"
		      android:text="@string/wifi_info"
		      android:textColor="@color/label_name_color"
		      android:layout_alignParentRight="true"
		      android:layout_marginRight="15dp"
		      android:gravity="center_horizontal"
		      android:layout_below="@id/wifi_view"
		      />
	</RelativeLayout>	
	
	<!--  <View
	  android:id="@+id/view1" 
   	  android:layout_height="1dp" 
   	  android:layout_width="fill_parent" 
   	  android:background="@color/divder_color" 
   	  android:layout_marginTop="20dp" 
   	  android:layout_below="@id/layout1"
   	  android:layout_alignLeft="@+id/layout1" 
   	  android:layout_alignRight="@+id/layout1"
   	  />-->
	
	<ImageView
        android:id="@+id/split_line1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/split_line" 
        android:layout_marginTop="20dp" 
   	    android:layout_below="@id/layout1"
   	    android:layout_alignLeft="@+id/layout1" 
   	    android:layout_alignRight="@+id/layout1">
       </ImageView>
	<RelativeLayout 
	     android:id="@+id/layout2"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:layout_marginTop="50dp" 
	     android:layout_marginLeft="50dp"
	     android:layout_marginRight="50dp"
	     android:gravity="center_vertical"
	     android:layout_below="@id/layout1"
	     >	       
       <ImageView
           android:id="@+id/query_view" 
           android:layout_marginLeft="15dp" 
           android:src="@drawable/query_selected" 
           android:layout_height="wrap_content" 
           android:layout_width="wrap_content"
           />
     	<TextView 
      		  android:layout_height="wrap_content"
		      android:layout_width="wrap_content"
		      android:text="@string/query_tool"
		      android:textColor="@color/label_name_color"
		      android:layout_marginLeft="10dp" 
		      android:gravity="center_horizontal"
		      android:layout_below="@id/query_view"
		      />
        <ImageView 
             android:id="@+id/convert_view" 
	         android:layout_height="wrap_content"
	         android:layout_width="wrap_content" 
	         android:layout_alignParentRight="true"
	         android:layout_marginRight="20dp"
	         android:src="@drawable/convert_selected"
	         android:layout_alignParentTop="true"
	         />
     	<TextView 
     	  android:layout_height="wrap_content"
	      android:layout_width="wrap_content"
	      android:text="@string/convert_tool"
	      android:textColor="@color/label_name_color"
	      android:layout_alignParentRight="true"
	      android:layout_marginRight="15dp"
	      android:gravity="center_horizontal"
	      android:layout_below="@id/convert_view"
	      />
	</RelativeLayout>	
	<!-- <View
	  android:id="@+id/view2" 
   	  android:layout_height="1dp" 
   	  android:layout_width="fill_parent" 
   	  android:background="@color/divder_color" 
   	  android:layout_marginTop="20dp" 
   	  android:layout_below="@id/layout2"
   	  android:layout_alignLeft="@+id/layout2" 
   	  android:layout_alignRight="@+id/layout2"
   	  /> -->
	<ImageView
        android:id="@+id/split_line2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/split_line" 
        android:layout_marginTop="20dp" 
   	    android:layout_below="@id/layout2"
   	    android:layout_alignLeft="@+id/layout2" 
   	    android:layout_alignRight="@+id/layout2">
       </ImageView>
	<RelativeLayout 
	     android:id="@+id/layout3"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:layout_marginTop="30dp" 
	     android:layout_marginLeft="50dp"
	     android:layout_marginRight="50dp"
	     android:gravity="center_vertical"
	     android:layout_below="@id/split_line2"
	     >	       
       <ImageView
           android:id="@+id/ring_view" 
           android:layout_marginLeft="15dp" 
           android:src="@drawable/ringtone_selected" 
           android:layout_height="wrap_content" 
           android:layout_width="wrap_content"
           />
     	<TextView 
      		  android:layout_height="wrap_content"
		      android:layout_width="wrap_content"
		      android:text="@string/set_ring"
		      android:textColor="@color/label_name_color"
		      android:layout_marginLeft="10dp" 
		      android:gravity="center_horizontal"
		      android:layout_below="@id/ring_view"
		      />
        <ImageView 
             android:id="@+id/timing_view" 
	         android:layout_height="wrap_content"
	         android:layout_width="wrap_content" 
	         android:layout_alignParentRight="true"
	         android:layout_marginRight="20dp"
	         android:src="@drawable/timing_selected"
	         android:layout_alignParentTop="true"
	         />
     	<TextView 
      		  android:layout_height="wrap_content"
		      android:layout_width="wrap_content"
		      android:text="@string/timing_tool"
		      android:textColor="@color/label_name_color"
		      android:layout_alignParentRight="true"
		      android:layout_marginRight="15dp"
		      android:gravity="center_horizontal"
		      android:layout_below="@id/timing_view"
		      />
	</RelativeLayout>
</RelativeLayout>
